Fix CSS spacing overrides in TDP Search Expandables

--- a/cfgov/unprocessed/apps/teachers-digital-platform/css/organisms/expandable-facets.less
+++ b/cfgov/unprocessed/apps/teachers-digital-platform/css/organisms/expandable-facets.less
@@ -35,8 +35,4 @@
         display: none;
     }
 
-    &.u-is-animating {
-        overflow: inherit;
-    }
-
 }
