--- a/cfgov/unprocessed/apps/teachers-digital-platform/css/pages/activity-search.less
+++ b/cfgov/unprocessed/apps/teachers-digital-platform/css/pages/activity-search.less
@@ -48,7 +48,6 @@
         });
 
         .o-expandable {
-            padding-bottom: unit( 15px / @base-font-size-px, em );
             border-bottom: 1px solid @gray-40;
             margin-bottom: unit( 15px / @base-font-size-px, em );
         }
@@ -57,14 +56,15 @@
         .o-expandable_content {
             border: 0;
             padding: 0;
+            overflow: hidden;
 
             &::before,
             &::after {
                 border: 0;
-                padding: 0;
             }
-            &.u-is-animating {
-                overflow: inherit;
+
+            &::before {
+                padding: 0;
             }
         }
 
